--- a/index.html
+++ b/index.html
@@ -2,35 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>NEURAL STATE | Persistent World</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NEURAL STATE v0.1.0</title>
     <style>
-        body { 
-            margin: 0; 
-            background: #050505; 
-            color: #00ffcc; 
-            font-family: 'Courier New', Courier, monospace;
-            overflow: hidden; 
-        }
-        #gui {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            z-index: 10;
-            pointer-events: none;
-            text-shadow: 0 0 10px #00ffcc;
-        }
-        canvas { display: block; }
-        .stats { font-size: 10px; opacity: 0.7; }
+        body { margin: 0; background: #000; overflow: hidden; cursor: crosshair; }
+        canvas { display: block; filter: contrast(1.1) saturate(1.2); }
     </style>
 </head>
 <body>
-    <div id="gui">
-        <h1>NEURAL STATE v0.1.0</h1>
-        <div class="stats">SYSTEM: WEBGPU_ACTIVE</div>
-        <div class="stats">WORLD: PERSISTENT_GRID</div>
-    </div>
-    
     <script type="module" src="/src/main.js"></script>
 </body>
 </html>
