--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEURAL STATE v0.1.0</title>
+    <title>NEURAL STATE</title>
     <style>
-        body { margin: 0; background: #000; overflow: hidden; cursor: crosshair; }
-        canvas { display: block; filter: contrast(1.1) saturate(1.2); }
+        body { margin: 0; background: #000; overflow: hidden; }
+        canvas { display: block; image-rendering: pixelated; } /* Keeps grid lines sharp */
     </style>
 </head>
 <body>
