--- a/index.html
+++ b/index.html
@@ -2,25 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEURAL STATE</title>
     <style>
-        body { margin: 0; background: #000; overflow: hidden; font-family: 'Inter', sans-serif; }
+        body { margin: 0; background: #000; overflow: hidden; font-family: sans-serif; }
         #ui {
             position: fixed; top: 30px; left: 30px;
             color: #00f2ff; text-shadow: 0 0 15px #00f2ff;
             pointer-events: none; letter-spacing: 4px;
+            z-index: 100;
         }
         .vignette {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: radial-gradient(circle, transparent 30%, rgba(0,0,0,0.9) 150%);
             pointer-events: none;
+            z-index: 10;
         }
     </style>
 </head>
 <body>
     <div id="ui">
-        <div style="font-size: 10px; opacity: 0.6;">NETWORK_LINK: ESTABLISHED</div>
-        <div style="font-size: 24px; font-weight: 900;">NEURAL STATE v0.1.2</div>
+        <div style="font-size: 10px; opacity: 0.6;">SYSTEM_LINK: ACTIVE</div>
+        <div style="font-size: 24px; font-weight: 900;">NEURAL STATE v0.1.5</div>
     </div>
     <div class="vignette"></div>
     <script type="module" src="/src/main.js"></script>
