--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cyber Racer WebGPU</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NEURAL STATE</title>
     <style>
-        body { margin: 0; background: #000; overflow: hidden; }
-        #ui { position: absolute; top: 20px; left: 20px; color: #0ff; font-family: 'Courier New', monospace; text-shadow: 0 0 10px #0ff; pointer-events: none; }
+        body { margin: 0; background: #000; overflow: hidden; font-family: 'Courier New', monospace; }
+        #ui {
+            position: fixed; top: 20px; left: 20px;
+            color: #00f2ff; text-shadow: 0 0 10px #00f2ff;
+            pointer-events: none; z-index: 10;
+        }
+        .vignette {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle, transparent 40%, rgba(0,0,0,0.9) 150%);
+            pointer-events: none; z-index: 5;
+        }
     </style>
 </head>
 <body>
-    <div id="ui"><h1>CORE_STABILIZED: 100%</h1><p>SPEED: <span id="speed">0</span> KM/H</p></div>
+    <div id="ui">
+        <h1 style="margin:0; font-size: 20px;">NEURAL STATE v0.1.0</h1>
+        <p style="font-size: 10px; opacity: 0.7;">LINK_STATUS: STABLE</p>
+    </div>
+    <div class="vignette"></div>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
