--- a/index.html
+++ b/index.html
@@ -2,28 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEURAL STATE</title>
     <style>
-        body { margin: 0; background: #000; overflow: hidden; font-family: 'Courier New', monospace; }
-        #ui {
-            position: fixed; top: 20px; left: 20px;
-            color: #00f2ff; text-shadow: 0 0 10px #00f2ff;
-            pointer-events: none; z-index: 10;
-        }
-        .vignette {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: radial-gradient(circle, transparent 40%, rgba(0,0,0,0.9) 150%);
-            pointer-events: none; z-index: 5;
-        }
+        body { margin: 0; background: #000; overflow: hidden; }
+        #ui { position: fixed; top: 20px; left: 20px; color: #00f2ff; font-family: monospace; pointer-events: none; }
     </style>
 </head>
 <body>
-    <div id="ui">
-        <h1 style="margin:0; font-size: 20px;">NEURAL STATE v0.1.0</h1>
-        <p style="font-size: 10px; opacity: 0.7;">LINK_STATUS: STABLE</p>
-    </div>
-    <div class="vignette"></div>
-    <script type="module" src="/main.js"></script>
+    <div id="ui">NEURAL_STATE_LINK: ACTIVE</div>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
